# arclib-graph

./: Cargo.toml  Makefile  README.md
arclib-graph-example/: Cargo.toml
arclib-graph-impl/: Cargo.toml
arclib-graph-impl/benches/: dense_array_benchmark.rs  graph_benchmark.rs
arclib-graph-impl/src/: access.rs  dtype.rs  graph.rs  lib.rs  node.rs  schedule.rs  storage.rs  utils.rs
arclib-graph-impl/src/base/: base_access.rs  base_graph.rs  base_storage.rs  context.rs  mod.rs
arclib-graph-impl/tests/: graph_creation.rs  test_dense_array.rs
arclib-graph-py/: Cargo.toml  pyproject.toml
arclib-graph-py/benches/: test_dense_array_benchmark.py  test_graph_benchmark.py
arclib-graph-py/python/arclib_graph/: __init__.py  custom_node.py
arclib-graph-py/src/: base_graph.rs  lib.rs  node_ref.rs  node_wrapper.rs
arclib-graph-py/tests/: test_creation.py  test_dense_array.py
arclib-graph-spec/: Cargo.toml
arclib-graph-spec/src/: context.rs  graph.rs  lib.rs
docs/: rust.html
docs/source/: api.rst  conf.py  index.rst
