[package]
name = "arclib-graph-impl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arclib-graph-spec = { path = "../arclib-graph-spec" }
uuid = { version = "1.23", features = ["v4"] }
half = { version = "2.7" }
ndarray = { version = "0.17" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[features]
default = ["std"]
std = []

[[bench]]
name = "graph_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3