[package]
name = "arclib-graph-py"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "arclib_graph"
crate-type = ["cdylib"]

[dependencies]
arclib-graph-spec = { path = "../arclib-graph-spec" }
arclib-graph-impl = { path = "../arclib-graph-impl" }
uuid = { version = "1.23", features = ["v4"] }
half = { version = "2.7" }
pyo3 = { version = "0.28", features = ["extension-module"] }

[dev-dependencies]